# GreenSpace-DigitalTwin

./: .gitignore  Makefile  app.py  requirements.txt
enviro_digital_twin/: digital_representative.py  enviro_digital_twin_stack.py  global_representative_stack.py  load_transform_data.py  transform_representative_data.py  utils.py
enviro_digital_twin/lambdas/aurora_processing_lambda/: aurora_processing_lambda.py  pyproject.toml
enviro_digital_twin/lambdas/data_processing_lambda/: data_processing_lambda.py  pyproject.toml  requirements.txt
enviro_digital_twin/lambdas/stream_processing_lambda/: pyproject.toml  stream_processing_lambda.py
tests/unit/: test_enviro_digital_twin_stack.py
