[tool.poetry]
name = "data_processing_lambda"
version = "0.1.0"
description = ""
authors = ["powers_rc <powerscameron@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
